# light-rpc

./: .gitignore  :w  Cargo.toml  Makefile  README.md  clien  client  client.c  foo  foo.c  hardhat.config.ts  hello  hello.c  main  main.c  package.json  pollserver.c  tsconfig.json
contracts/: Market.sol  NFT.sol
intro/: Cargo.toml  a.out  daytimetcpcli.c
intro/examples/: daytimetcpcli.rs
intro/src/: main.rs
ledger/src/: shred.rs
ledger/src/shred/: legacy.rs  merkle.rs  shred_code.rs  shred_data.rs
lib/: error.c  unp.h
rpc-client/: Cargo.toml
rpc-client-api/: Cargo.toml
rpc-client-api/src/: config.rs  request.rs  response.rs
rpc-client/src/: rpc_client.rs
rpc-client/src/nonblocking/: rpc_client.rs
rpc/src/: rpc.rs
scripts/: run.sh
test/: index.ts
transaction-status/src/: lib.rs
vote/src/: vote_parser.rs
